--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Click the button</h1>
 
       <div class="dice">
         <p>Player 1</p>
@@ -22,10 +22,15 @@
         <p>Player 2</p>
         <img class="img2" src="images/dice6.png" />
       </div>
+      <br />
+      <button class="btn">Click to roll dice.</button>
     </div>
 
     <script src="index.js"></script>
   </body>
 
-  <footer>www 🎲 App Brewery 🎲 com</footer>
+  <footer>
+    <img class="linkedin-icon" src="linkedin.png" alt="linkedin-icon" />
+    <a href="https://www.linkedin.com/in/yogesh-jaga-790b25190">Linkdin</a>
+  </footer>
 </html>
